--- a/DXApplication1/App.config
+++ b/DXApplication1/App.config
@@ -6,6 +6,9 @@
     </sectionGroup>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PointOfSale.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="PointOfSale.Properties.Settings.subConnString" connectionString="Data Source=.\SUBSQL;Initial Catalog=sub;Persist Security Info=True;User ID=sa;Password=sql123_"
@@ -93,4 +96,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <userSettings>
+    <PointOfSale.Properties.Settings>
+      <setting name="LoginName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LoginPassword" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LoginChecked" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </PointOfSale.Properties.Settings>
+  </userSettings>
 </configuration>
