--- a/DXApplication1/PointOfSale.csproj
+++ b/DXApplication1/PointOfSale.csproj
@@ -64,6 +64,8 @@
     <Reference Include="DevExpress.Data.Desktop.v21.1" />
     <Reference Include="DevExpress.Data.v21.1" />
     <Reference Include="DevExpress.DataAccess.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.DataAccess.v21.1.UI, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Diagram.v21.1.Core, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Images.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Office.v21.1.Core, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Pdf.v21.1.Core, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -76,6 +78,7 @@
     <Reference Include="DevExpress.Xpo.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraBars.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraCharts.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraDiagram.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v21.1" />
     <Reference Include="DevExpress.Printing.v21.1.Core" />
     <Reference Include="DevExpress.XtraGauges.v21.1.Core, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -85,6 +88,8 @@
     <Reference Include="DevExpress.XtraPrinting.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraReports.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraReports.v21.1.Extensions, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraRichEdit.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraTreeList.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraWizard.v21.1, Version=21.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
@@ -186,6 +191,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.7.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
@@ -219,6 +225,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppCode\AdoMethods.cs" />
@@ -227,11 +234,23 @@
     <Compile Include="AppCode\Extensions.cs" />
     <Compile Include="AppCode\Methods.cs" />
     <Compile Include="AppCode\ReportClass.cs" />
-    <Compile Include="FormReport.cs">
+    <Compile Include="FormReportEditor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormReport.Designer.cs">
-      <DependentUpon>FormReport.cs</DependentUpon>
+    <Compile Include="FormReportEditor.Designer.cs">
+      <DependentUpon>FormReportEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormReportGrid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormReportGrid.Designer.cs">
+      <DependentUpon>FormReportGrid.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormReportFilter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormReportFilter.Designer.cs">
+      <DependentUpon>FormReportFilter.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\20211019081211_initial.cs" />
     <Compile Include="Migrations\20211019081211_initial.designer.cs">
@@ -260,6 +279,26 @@
     <Compile Include="Migrations\20220130212303_added-DcReport6.cs" />
     <Compile Include="Migrations\20220130212303_added-DcReport6.designer.cs">
       <DependentUpon>20220130212303_added-DcReport6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20220131140234_added-reportLayout.cs" />
+    <Compile Include="Migrations\20220131140234_added-reportLayout.designer.cs">
+      <DependentUpon>20220131140234_added-reportLayout.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20220131141447_added-reportRowGuid.cs" />
+    <Compile Include="Migrations\20220131141447_added-reportRowGuid.designer.cs">
+      <DependentUpon>20220131141447_added-reportRowGuid.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20220131141900_added-reportRowGuid2.cs" />
+    <Compile Include="Migrations\20220131141900_added-reportRowGuid2.designer.cs">
+      <DependentUpon>20220131141900_added-reportRowGuid2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20220131142741_added-reportRowGuid4.cs" />
+    <Compile Include="Migrations\20220131142741_added-reportRowGuid4.designer.cs">
+      <DependentUpon>20220131142741_added-reportRowGuid4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20220131172138_added-reportFilter.cs" />
+    <Compile Include="Migrations\20220131172138_added-reportFilter.designer.cs">
+      <DependentUpon>20220131172138_added-reportFilter.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Procedures\Add_procedures.cs" />
     <Compile Include="Migrations\Procedures\Add_procedures.designer.cs">
@@ -429,8 +468,14 @@
     <EmbeddedResource Include="FormQty.resx">
       <DependentUpon>FormQty.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormReport.resx">
-      <DependentUpon>FormReport.cs</DependentUpon>
+    <EmbeddedResource Include="FormReportEditor.resx">
+      <DependentUpon>FormReportEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormReportFilter.resx">
+      <DependentUpon>FormReportFilter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormReportGrid.resx">
+      <DependentUpon>FormReportGrid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTransfer.resx">
       <DependentUpon>FormTransfer.cs</DependentUpon>
