--- a/DXApplication1/App.config
+++ b/DXApplication1/App.config
@@ -107,6 +107,9 @@
       <setting name="LoginChecked" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="GridViewLayout" serializeAs="String">
+        <value />
+      </setting>
     </PointOfSale.Properties.Settings>
   </userSettings>
 </configuration>
