--- a/DXApplication1/Properties/Settings.settings
+++ b/DXApplication1/Properties/Settings.settings
@@ -19,5 +19,8 @@
     <Setting Name="LoginChecked" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="GridViewLayout" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
