--- a/DXApplication1/PointOfSale.csproj
+++ b/DXApplication1/PointOfSale.csproj
@@ -351,6 +351,10 @@
     <Compile Include="Migrations\20220212122459_addedProduct.designer.cs">
       <DependentUpon>20220212122459_addedProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20220212183317_added_DisplayName.cs" />
+    <Compile Include="Migrations\20220212183317_added_DisplayName.designer.cs">
+      <DependentUpon>20220212183317_added_DisplayName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Procedures\Add_procedures.cs" />
     <Compile Include="Migrations\Procedures\Add_procedures.designer.cs">
       <DependentUpon>Add_procedures.cs</DependentUpon>
