--- a/DXApplication1/PointOfSale.csproj
+++ b/DXApplication1/PointOfSale.csproj
@@ -238,7 +238,7 @@
     <Compile Include="AppCode\ReflectionExtensions.cs" />
     <Compile Include="AppCode\DsMethods.cs" />
     <Compile Include="AppCode\Authorization.cs" />
-    <Compile Include="AppCode\Extensions.cs" />
+    <Compile Include="AppCode\MathExtensions.cs" />
     <Compile Include="AppCode\Methods.cs" />
     <Compile Include="AppCode\ReportClass.cs" />
     <Compile Include="Form1.cs">
@@ -366,7 +366,7 @@
     <Compile Include="Models\Entity\DcReport.cs" />
     <Compile Include="Models\Entity\StringReturn.cs" />
     <Compile Include="Models\ViewModel\ReportVM.cs" />
-    <Compile Include="Class3.cs" />
+    <Compile Include="AppCode\EFDatasource.cs" />
     <Compile Include="FormChange.cs">
       <SubType>Form</SubType>
     </Compile>
