--- a/DXApplication1/PointOfSale.csproj
+++ b/DXApplication1/PointOfSale.csproj
@@ -355,6 +355,10 @@
     <Compile Include="Migrations\20220212183317_added_DisplayName.designer.cs">
       <DependentUpon>20220212183317_added_DisplayName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20220212235727_nothing.cs" />
+    <Compile Include="Migrations\20220212235727_nothing.designer.cs">
+      <DependentUpon>20220212235727_nothing.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Procedures\Add_procedures.cs" />
     <Compile Include="Migrations\Procedures\Add_procedures.designer.cs">
       <DependentUpon>Add_procedures.cs</DependentUpon>
