--- a/DXApplication1/App.config
+++ b/DXApplication1/App.config
@@ -110,6 +110,15 @@
       <setting name="GridViewLayout" serializeAs="String">
         <value />
       </setting>
+      <setting name="OfficeCode" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="StoreCode" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="WarehouseCode" serializeAs="String">
+        <value />
+      </setting>
     </PointOfSale.Properties.Settings>
   </userSettings>
 </configuration>
